<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TreasureGame</string>
    <string name="action_settings">Settings</string>
	<string name="action_help">Help</string>
	<string name="treasure_title">Treasure Hunts Near You!</string>
	<string name="latitude">Latitude: -122.ABCDEF \nLongitude: 37.432223</string>
	<string name="ques_dialog">Where is Restaurant Mos Eisle?</string>
    <string name="sub_dialog">GOT IT</string>
    <string name="content_des">Round 1</string>
    <string name="content_des2">Round 2</string>
    <string name="s_booty">CLAIM BOOTY</string>
    <string name="s_hint1">HINT #1</string>
    <string name="s_hint2">HINT #2</string>
    <string name="s_hint3">HINT #3</string>
    <string name="splash">Splash</string>
</resources>
