<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:contentDescription="@string/content_des"
        android:src="@drawable/icon_r" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center">
        
        <Button
        android:id="@+id/btn_booty"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/s_booty" 
        android:textColor="#FFFFFF"
        android:background="#5bc0de"/>

    	<Button
        android:id="@+id/btn_hint1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/s_hint1" 
        android:textColor="#FFFFFF"
        android:background="#5bc0de"/>

    	<Button
        android:id="@+id/btn_hint2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/s_hint2" 
        android:textColor="#FFFFFF"
        android:background="#5bc0de"/>

    	<Button
        android:id="@+id/btn_hint3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/s_hint3" 
        android:textColor="#FFFFFF"
        android:background="#5bc0de"/>
    </LinearLayout>
    

</LinearLayout>
